alfio-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: alfio
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: alfio
    spec:
      containers:
      - name: alfio-app
        image: alfio/alf.io
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "300m"
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - name: web
          containerPort: 8080
# Unclear if Alf.io has a health endpoint?!
#        readinessProbe:
#          httpGet:
#            path: /healthz
#            port: web
#        livenessProbe:
#          httpGet:
#            path: /healthz
#            port: web
#          initialDelaySeconds: 180
