alfio-mysql.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: alfio-mysql
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: alfio-mysql
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: mysql
        image: mysql:5.7.20
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql/
---
apiVersion: v1
kind: Service
metadata:
  name: alfio-mysql
  namespace: default
spec:
  selector:
    app: alfio-mysql
  ports:
  - port: 3306
