alfio-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alfio
  namespace: default
  annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/affinity: "cookie"
      nginx.ingress.kubernetes.io/session-cookie-name: "route"
      nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - www.alfio.com
    secretName: www-alfio-com-tls
  rules:
  - host: www.alfio.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alfio
          servicePort: 8080
